<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/iv_setting_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_setting"
        android:tint="@color/dark_violet"
        android:contentDescription="@string/setting_icon"/>

    <TextView
        android:id="@+id/tv_setting_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:textSize="16sp"
        android:textColor="@color/dark_violet"
        android:layout_marginStart="16dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/iv_setting_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_arrow_forward"
        android:tint="@color/dark_violet"
        android:contentDescription="@string/arrow_icon"/>

</LinearLayout>